# yesser-todo-cli

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  LICENSE.txt  README.md  SECURITY.md  build.rs  compose.yaml  test-all.sh
.cargo/: config.toml
.github/workflows/: publish-cargo.yml  publish-windows.yml  publish.yml  test.yml
api/: Cargo.toml  LICENSE
api/src/: api_error.rs  helpers.rs  lib.rs
cli/: .gitignore  Cargo.toml  LICENSE  appxmanifest.xml  build-appx.ps1
cli/.winapp/debug/: appxmanifest.xml
cli/wix/: main.wxs
db/: Cargo.toml
db/src/: db_error.rs  lib.rs
errors/: Cargo.toml
errors/src/: api_error.rs  command_error.rs  db_error.rs  lib.rs  server_error.rs
lib/: Cargo.toml  README.md
server/: Cargo.toml  server-test.sh
server/src/: db_error_wrap.rs  functions.rs  main.rs  queries.rs  server_error.rs
src/: args.rs  db.rs  main.rs
wix/: License.rtf  main.wxs
