[package]
name = "todo"
authors = ["Yesser Studios <yesseruseryt@gmail.com>"]
version = "1.0.1"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "A to-do CLI written in Rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["todo", "tasks", "tasklist", "todolist", "cli"]
exclude = ["/wix/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
serde_json = "1.0.115"
platform-dirs = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
winres = "0.1.12"
copy_to_output = "2.2.0"