[package]
name = "yesser-todo-cli"
authors = ["Yesser Studios <yesseruseryt@gmail.com>"]
version = "1.1.2"
edition = "2024"
license = "MIT"
description = "A to-do CLI written in Rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["todo", "tasks", "tasklist", "todolist", "cli"]
exclude = ["/wix/"]
homepage = "https://github.com/Yesser-Studios/yesser-todo-cli"
repository = "https://github.com/Yesser-Studios/yesser-todo-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
console = "0.15.10"
yesser-todo-db = "1"

[[bin]]
name = "todo"
