[package]
name = "yesser-todo-api"
version = "2.0.0"
edition = "2024"
license = "Apache-2.0"
description = "A wrapper for yesser-todo-server written in Rust"
readme = "../README.md"
categories = ["api-bindings"]
keywords = ["todo", "tasks", "tasklist", "todolist", "wrapper"]
homepage = "https://github.com/Yesser-Studios/yesser-todo-cli"
repository = "https://github.com/Yesser-Studios/yesser-todo-cli"

[dependencies]
reqwest = { version = "0", features = ["json"] }
thiserror = "2.0.18"
yesser-todo-db = "2"
yesser-todo-errors = { version = "0.1", path = "../errors" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
