[package]
name = "yesser-todo-api"
version = "3.0.0"
edition = "2024"
license = "Apache-2.0"
description = "A wrapper for yesser-todo-server written in Rust"
readme = "../README.md"
categories = ["api-bindings"]
keywords = ["todo", "tasks", "tasklist", "todolist", "wrapper"]
homepage = "https://github.com/Yesser-Studios/yesser-todo-cli"
repository = "https://github.com/Yesser-Studios/yesser-todo-cli"

[dependencies]
ureq = { version = "3", default-features = false, features = ["json", "native-tls"] }
thiserror = "2.0.18"
yesser-todo-db = "2"
yesser-todo-errors = { version = "0.1", path = "../errors", features = ["client"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
