[package]
name = "yesser-todo-db"
authors = ["Yesser Studios <yesseruseryt@gmail.com>"]
version = "1.3.1"
edition = "2024"
license = "MIT"
description = "A library for managing notes for yesser-todo-cli"
readme = "README.md"
categories = ["database"]
keywords = ["todo", "tasks", "tasklist", "todolist", "cli"]
homepage = "https://github.com/Yesser-Studios/yesser-todo-cli"
repository = "https://github.com/Yesser-Studios/yesser-todo-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
platform-dirs = "0.3"
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1