[package]
name = "yesser-todo-db"
authors = ["Yesser Studios <yesseruseryt@gmail.com>"]
version = "3.0.0"
edition = "2024"
license = "Apache-2.0"
description = "A library for managing notes for yesser-todo-cli"
readme = "README.md"
categories = ["database"]
keywords = ["todo", "tasks", "tasklist", "todolist", "cli"]
homepage = "https://github.com/Yesser-Studios/yesser-todo-cli"
repository = "https://github.com/Yesser-Studios/yesser-todo-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
platform-dirs = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
yesser-todo-errors = { version = "0.1", path = "../errors" }
