[package]
name = "yesser-todo-errors"
version = "0.2.0"
edition = "2024"
authors = ["Yesser Studios <yesseruseryt@gmail.com>"]
license = "AGPL-3.0"
description = "Error library for yesser-todo"
readme = "../README.md"
categories = ["development-tools"]
keywords = ["todo", "tasks", "tasklist", "todolist", "cli"]
homepage = "https://github.com/Yesser-Studios/yesser-todo-cli"
repository = "https://github.com/Yesser-Studios/yesser-todo-cli"

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["macros", "json"], optional = true }
ureq = { version = "3", default-features = false, features = ["json"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2"
http = "1"

[features]
server = ["dep:axum"]
client = ["dep:ureq"]
